# raven

./: .gitignore  Cargo.toml
raven-integrations/raven-ansi-escape/: Cargo.toml
raven-integrations/raven-apply-patch/: Cargo.toml
raven-integrations/raven-apply-patch/src/: main.rs
raven-integrations/raven-async-utils/: Cargo.toml
raven-integrations/raven-file-search/: Cargo.toml
raven-integrations/raven-file-search/src/: main.rs
raven-integrations/raven-keyring-store/: Cargo.toml
raven-integrations/raven-mcp-types/: Cargo.toml  generate_mcp_types.py
raven-integrations/raven-mcp-types/src/: lib.rs
raven-integrations/raven-process-hardening/: Cargo.toml
raven-integrations/raven-process-hardening/src/: lib.rs
raven-integrations/raven-responses-api-proxy/: Cargo.toml
raven-integrations/raven-responses-api-proxy/src/: main.rs  read_api_key.rs
raven-integrations/raven-stdio-to-uds/: Cargo.toml
raven-integrations/raven-stdio-to-uds/src/: main.rs
raven-sandbox/raven-linux-sandbox/: Cargo.toml
raven-sandbox/raven-window-sandbox/: Cargo.toml
raven-utils/raven-absolute-path/: Cargo.toml
raven-utils/raven-cache/: Cargo.toml
raven-utils/raven-git/: Cargo.toml
raven-utils/raven-git/src/: apply.rs  ghost_commits.rs  platform.rs
raven-utils/raven-image/: Cargo.toml
raven-utils/raven-image/src/: lib.rs
raven-utils/raven-json-to-toml/: Cargo.toml
raven-utils/raven-pty/: Cargo.toml
raven-utils/raven-readiness/: Cargo.toml
raven-utils/raven-string/: Cargo.toml
raven/raven-core/: Cargo.toml
raven/raven-providers/: Cargo.toml
raven/raven-session/: Cargo.toml
